fixing windows scrollbar issues, still not done

--- a/renderer/src/components/TextEditor/TextEditor.css
+++ b/renderer/src/components/TextEditor/TextEditor.css
@@ -65,7 +65,7 @@
   padding-right: 5px; */
   padding-top: 15px;
   padding-bottom: 15px;
-  overflow: scroll;
+  overflow: hidden;
   text-align: right;
   height: inherit;
   border-right: 2px inset white;
@@ -89,7 +89,6 @@
 
 #editor-bottom-scrollbar {
   position: absolute;
-  margin-bottom: -2px;
   bottom: 0;
   /* left: 0;
   right: 0; */
